--- a/.env.sample
+++ b/.env.sample
@@ -3,6 +3,7 @@ VITE_APPWRITE_PROJECT_ID = ""
 VITE_APPWRITE_DATABASE_ID = ""
 VITE_APPWRITE_COLLECTION_ID = ""
 VITE_APPWRITE_BUCKET_ID = ""
+VITE_APPWRITE_COMMENT_COLLECTION_ID = ""
 
 # we have added .env into git ignore that means ki use colleboration me other 
 # member nahi dekh payenge. so while development they need to put their own values in these variables.
@@ -13,4 +14,4 @@ VITE_APPWRITE_BUCKET_ID = ""
 # VITE_APPWRITE_URL=https://cloud.appwrite.io/v1  like this.
 
 # also helpful in debugging. as all the important variables are mentioned here so 
-# if anyone forget one can ckeck here and easily debug.
+# if anyone forget one can check here and easily debug.
