--- a/.env.sample
+++ b/.env.sample
@@ -4,6 +4,7 @@ VITE_APPWRITE_DATABASE_ID = ""
 VITE_APPWRITE_COLLECTION_ID = ""
 VITE_APPWRITE_BUCKET_ID = ""
 VITE_APPWRITE_COMMENT_COLLECTION_ID = ""
+VITE_APPWRITE_PROFILE_COLLECTION_ID = ""
 
 # we have added .env into git ignore that means ki use colleboration me other 
 # member nahi dekh payenge. so while development they need to put their own values in these variables.
